--- a/.travis.yml
+++ b/.travis.yml
@@ -8,15 +8,15 @@ before_install:
 script: 
   - docker run -e CI=true mrhassanmurtaza/docker-react-cicd-demo npm run test
 
-deploy:
-  provider: elasticbeanstalk
-  region: "us-west-1"
-  app: "docker-react"
-  env: "DockerReact-env"
-  bucket_name: "elasticbeanstalk-us-west-1-765580159721"
-  bucket_path: "docker-react"
-  on:
-    branch: master
-  access_key_id: $AWS_ACCESS_KEY
-  secret_access_key:
-    secure: "$AWS_SECRET_KEY"
+# deploy:
+#   provider: elasticbeanstalk
+#   region: "us-west-1"
+#   app: "docker-react"
+#   env: "DockerReact-env"
+#   bucket_name: "elasticbeanstalk-us-west-1-765580159721"
+#   bucket_path: "docker-react"
+#   on:
+#     branch: master
+#   access_key_id: $AWS_ACCESS_KEY
+#   secret_access_key:
+#     secure: "$AWS_SECRET_KEY"
